adjusting final details, fixing padding and margin

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <section class="cupones container pt-5">
+    <section class="cupones container pt-5 mx-auto">
         <div class="row mt-5 mx-auto">
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
